--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
-  "functions": {
-    "api/*.py": {
-      "runtime": "python@3.9"
-    }
-  }
+  "version": 2,
+  "builds": [
+    { "src": "api.py", "use": "@vercel/python" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "api.py" }
+  ]
 }
